@@ -1,5 +1,12 @@
 package fr.inria.corese.command.utils.http;
 
+import jakarta.ws.rs.client.WebTarget;
+import jakarta.ws.rs.core.Response;
+
+import org.apache.commons.lang3.tuple.Pair;
+
+import picocli.CommandLine.Model.CommandSpec;
+
 import java.io.PrintWriter;
 import java.net.URI;
 import java.net.URLDecoder;
@@ -7,25 +14,18 @@ import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.tuple.Pair;
-
-import jakarta.ws.rs.client.WebTarget;
-import jakarta.ws.rs.core.Response;
-import picocli.CommandLine.Model.CommandSpec;
 
 /**
- * Utility class to print details of HTTP requests and responses.
- * This class is used for debugging and logging purposes.
+ * Utility class to print details of HTTP requests and responses. This class is used for debugging
+ * and logging purposes.
  */
 public class SparqlHttpPrinter {
     private final PrintWriter err;
 
     /**
-     * Constructor to initialize the printer with a PrintWriter.
-     * This is typically used to print to the standard error output.
-     * 
+     * Constructor to initialize the printer with a PrintWriter. This is typically used to print to
+     * the standard error output.
+     *
      * @param spec The command specification containing the PrintWriter.
      */
     public SparqlHttpPrinter(CommandSpec spec) {
@@ -33,101 +33,204 @@ public class SparqlHttpPrinter {
     }
 
     /**
-     * Prints the details of an HTTP request.
-     * This includes the URL, HTTP method, query parameters, headers, and body
-     * content.
-     * 
-     * @param webTarget   The target of the HTTP request.
+     * Prints the details of an HTTP request. This includes the URL, HTTP method, query parameters,
+     * headers, and body content.
+     *
+     * @param webTarget The target of the HTTP request.
      * @param bodyContent The body content of the request.
      * @param contentType The content type of the request.
-     * @param headers     The headers of the request.
-     * @param method      The HTTP method used for the request (GET, POST, etc.).
+     * @param headers The headers of the request.
+     * @param method The HTTP method used for the request (GET, POST, etc.).
      */
-    public void printRequest(WebTarget webTarget, String bodyContent, String contentType,
-            List<Pair<String, String>> headers, EnumRequestMethod method) {
+    public void printRequest(
+            WebTarget webTarget,
+            String bodyContent,
+            String contentType,
+            List<Pair<String, String>> headers,
+            HttpRequestMethod method) {
         err.println("╔════════════════════════════════╗");
         err.println("║        REQUEST DETAILS         ║");
         err.println("╚════════════════════════════════╝\n");
 
-        // Print the URL of the request
+        printUrl(webTarget);
+        printMethod(method);
+        printQueryParameters(webTarget);
+        printHeaders(headers, contentType);
+        printRequestBody(bodyContent);
+
+        err.println("\n──────────────────────────────────");
+    }
+
+    /**
+     * Prints the URL of the request.
+     *
+     * @param webTarget The target of the HTTP request.
+     */
+    private void printUrl(WebTarget webTarget) {
         if (webTarget != null && webTarget.getUri() != null) {
             err.println("► URL");
             err.println("  " + webTarget.getUri());
         }
+    }
 
-        // Print the HTTP method of the request
+    /**
+     * Prints the HTTP method of the request.
+     *
+     * @param method The HTTP method used for the request.
+     */
+    private void printMethod(HttpRequestMethod method) {
         if (method != null) {
             err.println("\n► METHOD");
             err.println("  " + method.name());
         }
+    }
 
-        // Print query parameters if present in the URL
+    /**
+     * Prints the query parameters if present in the URL.
+     *
+     * @param webTarget The target of the HTTP request.
+     */
+    private void printQueryParameters(WebTarget webTarget) {
+        if (webTarget == null || webTarget.getUri() == null) {
+            return;
+        }
+
         URI uri = webTarget.getUri();
-        if (uri != null && uri.getQuery() != null) {
-            err.println("\n► QUERY PARAMETERS");
-            Map<String, String> decodedParams = parseQueryParams(uri.getQuery());
-            for (Map.Entry<String, String> entry : decodedParams.entrySet()) {
-                String key = entry.getKey();
-                String value = entry.getValue();
-                String[] lines = value.split("\n");
-
-                if (lines.length == 1) {
-                    err.println("  " + key + "=" + value);
-                } else {
-                    err.println("  " + key + "=");
-                    int lastNonEmpty = lines.length - 1;
-                    while (lastNonEmpty >= 0 && lines[lastNonEmpty].isBlank()) {
-                        lastNonEmpty--;
-                    }
-                    for (int i = 0; i <= lastNonEmpty; i++) {
-                        err.println("    " + lines[i]);
-                    }
-                }
-            }
+        if (uri.getQuery() == null) {
+            return;
         }
 
-        // Print headers and content type if available
-        if ((headers != null && !headers.isEmpty()) || (contentType != null && !contentType.isEmpty())) {
-            err.println("\n► HEADERS");
+        err.println("\n► QUERY PARAMETERS");
+        Map<String, String> decodedParams = parseQueryParams(uri.getQuery());
+        for (Map.Entry<String, String> entry : decodedParams.entrySet()) {
+            printQueryParameter(entry.getKey(), entry.getValue());
+        }
+    }
 
-            // Group headers by key
-            Map<String, StringBuilder> normalized = new LinkedHashMap<>();
-            for (Pair<String, String> header : headers) {
-                String key = normalizeHeaderKey(header.getKey());
-                normalized.computeIfAbsent(key, k -> new StringBuilder())
-                        .append(header.getValue()).append(",");
-            }
+    /**
+     * Prints a single query parameter.
+     *
+     * @param key The parameter key.
+     * @param value The parameter value.
+     */
+    private void printQueryParameter(String key, String value) {
+        String[] lines = value.split("\n");
 
-            // Add content type to headers
-            if (contentType != null && !contentType.isEmpty()) {
-                String key = "Content-Type";
-                normalized.computeIfAbsent(key, k -> new StringBuilder())
-                        .append(contentType).append(",");
-            }
-
-            // Print headers
-            for (Map.Entry<String, StringBuilder> entry : normalized.entrySet()) {
-                String values = entry.getValue().toString().replaceAll(",$", "");
-                err.println("  " + entry.getKey() + ": " + values);
+        if (lines.length == 1) {
+            err.println("  " + key + "=" + value);
+        } else {
+            err.println("  " + key + "=");
+            int lastNonEmpty = findLastNonEmptyLine(lines);
+            for (int i = 0; i <= lastNonEmpty; i++) {
+                err.println("    " + lines[i]);
             }
         }
+    }
 
-        // Print the body content of the request if available
+    /**
+     * Finds the index of the last non-empty line in an array of lines.
+     *
+     * @param lines The array of lines.
+     * @return The index of the last non-empty line.
+     */
+    private int findLastNonEmptyLine(String[] lines) {
+        int lastNonEmpty = lines.length - 1;
+        while (lastNonEmpty >= 0 && lines[lastNonEmpty].isBlank()) {
+            lastNonEmpty--;
+        }
+        return lastNonEmpty;
+    }
+
+    /**
+     * Prints the headers and content type if available.
+     *
+     * @param headers The headers of the request.
+     * @param contentType The content type of the request.
+     */
+    private void printHeaders(List<Pair<String, String>> headers, String contentType) {
+        boolean hasHeaders = headers != null && !headers.isEmpty();
+        boolean hasContentType = contentType != null && !contentType.isEmpty();
+
+        if (!hasHeaders && !hasContentType) {
+            return;
+        }
+
+        err.println("\n► HEADERS");
+
+        Map<String, StringBuilder> normalized = normalizeHeaders(headers);
+        addContentTypeHeader(normalized, contentType);
+        printNormalizedHeaders(normalized);
+    }
+
+    /**
+     * Normalizes headers by grouping them by key.
+     *
+     * @param headers The headers to normalize.
+     * @return A map of normalized headers.
+     */
+    private Map<String, StringBuilder> normalizeHeaders(List<Pair<String, String>> headers) {
+        Map<String, StringBuilder> normalized = new LinkedHashMap<>();
+        
+        if (headers == null) {
+            return normalized;
+        }
+
+        for (Pair<String, String> header : headers) {
+            String key = normalizeHeaderKey(header.getKey());
+            normalized
+                    .computeIfAbsent(key, k -> new StringBuilder())
+                    .append(header.getValue())
+                    .append(",");
+        }
+        return normalized;
+    }
+
+    /**
+     * Adds the content type to the normalized headers.
+     *
+     * @param normalized The normalized headers map.
+     * @param contentType The content type to add.
+     */
+    private void addContentTypeHeader(Map<String, StringBuilder> normalized, String contentType) {
+        if (contentType != null && !contentType.isEmpty()) {
+            String key = "Content-Type";
+            normalized
+                    .computeIfAbsent(key, k -> new StringBuilder())
+                    .append(contentType)
+                    .append(",");
+        }
+    }
+
+    /**
+     * Prints the normalized headers.
+     *
+     * @param normalized The normalized headers to print.
+     */
+    private void printNormalizedHeaders(Map<String, StringBuilder> normalized) {
+        for (Map.Entry<String, StringBuilder> entry : normalized.entrySet()) {
+            String values = entry.getValue().toString().replaceAll(",$", "");
+            err.println("  " + entry.getKey() + ": " + values);
+        }
+    }
+
+    /**
+     * Prints the body content of the request if available.
+     *
+     * @param bodyContent The body content to print.
+     */
+    private void printRequestBody(String bodyContent) {
         if (bodyContent != null && !bodyContent.isEmpty()) {
             err.println("\n► REQUEST BODY");
             for (String line : bodyContent.split("\n")) {
                 err.println("  " + line);
             }
         }
-
-        err.println("\n──────────────────────────────────");
     }
 
     /**
-     * Prints the details of an HTTP response.
-     * This includes the HTTP status code, status information, headers, and any
-     * other relevant details.
-     * 
+     * Prints the details of an HTTP response. This includes the HTTP status code, status
+     * information, headers, and any other relevant details.
+     *
      * @param response The HTTP response received from the server.
      */
     public void printResponse(Response response) {
@@ -158,8 +261,8 @@ public class SparqlHttpPrinter {
             err.println("\n► HEADERS");
             for (Map.Entry<String, List<Object>> entry : headers.entrySet()) {
                 String key = normalizeHeaderKey(entry.getKey());
-                String value = String.join(", ",
-                        entry.getValue().stream().map(Object::toString).collect(Collectors.toList()));
+                String value =
+                        String.join(", ", entry.getValue().stream().map(Object::toString).toList());
                 err.println("  " + key + ": " + value);
             }
         }
@@ -168,22 +271,21 @@ public class SparqlHttpPrinter {
     }
 
     /**
-     * Normalizes the header key by converting it to a standard format.
-     * This method capitalizes the first letter of each part of the header key
-     * and removes any trailing hyphen.
-     * 
+     * Normalizes the header key by converting it to a standard format. This method capitalizes the
+     * first letter of each part of the header key and removes any trailing hyphen.
+     *
      * @param key The header key to normalize.
      * @return The normalized header key.
      */
     private String normalizeHeaderKey(String key) {
-        if (key == null || key.isEmpty())
-            return "";
+        if (key == null || key.isEmpty()) return "";
         String lower = key.toLowerCase();
         String[] parts = lower.split("-");
         StringBuilder capitalized = new StringBuilder();
         for (String part : parts) {
             if (!part.isEmpty()) {
-                capitalized.append(Character.toUpperCase(part.charAt(0)))
+                capitalized
+                        .append(Character.toUpperCase(part.charAt(0)))
                         .append(part.substring(1))
                         .append("-");
             }
@@ -192,16 +294,15 @@ public class SparqlHttpPrinter {
     }
 
     /**
-     * Parses the query parameters from a URL-encoded query string.
-     * This method decodes the key-value pairs and returns them as a map.
-     * 
+     * Parses the query parameters from a URL-encoded query string. This method decodes the
+     * key-value pairs and returns them as a map.
+     *
      * @param query The URL-encoded query string.
      * @return A map containing the decoded key-value pairs.
      */
     private Map<String, String> parseQueryParams(String query) {
         Map<String, String> map = new LinkedHashMap<>();
-        if (query == null || query.isBlank())
-            return map;
+        if (query == null || query.isBlank()) return map;
 
         for (String param : query.split("&")) {
             String[] kv = param.split("=", 2);
@@ -213,9 +314,9 @@ public class SparqlHttpPrinter {
     }
 
     /**
-     * Decodes a URL-encoded string using UTF-8 encoding.
-     * If decoding fails, it returns the original string.
-     * 
+     * Decodes a URL-encoded string using UTF-8 encoding. If decoding fails, it returns the original
+     * string.
+     *
      * @param value The URL-encoded string to decode.
      * @return The decoded string or the original string if decoding fails.
      */
